--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.4"
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.9.4",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
